# Robokasi

./: .gitignore  CMakeLists.txt
res/shaders/: FS_Joint.glsl  FS_Simple.glsl  VS_Joint.glsl  VS_Simple.glsl
src/: Arm.cpp  Arm.hpp  Camera.cpp  Camera.hpp  Joint.cpp  Joint.hpp  LinearAlgebra.hpp  Mesh.cpp  Mesh.hpp  Serial.cpp  Serial.hpp  Shader.cpp  Shader.hpp  Trajectory.cpp  Trajectory.hpp  main.cpp
